--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@apollo/client": "^3.3.6",
+    "@apollo/link-context": "^2.0.0-beta.3",
+    "@auth0/auth0-react": "^1.2.0",
     "@emotion/react": "^11.1.3",
     "@emotion/styled": "^11.0.0",
     "@testing-library/jest-dom": "^5.11.4",
